# calorie_bot

./: .gitignore  README.md  main.py  pyproject.toml
bot/: telegram_bot.py
data/: food_database.jsonl
db/: db_manager.py  schema.py
llm/: phi_interface.py  prompt_builder.py
scheduler/: jobs.py  scheduler.py
utils/: graphing.py
