[project]
name = "calorie_bot"
version = "0.1.0"
dependencies = [
    "python-telegram-bot",
    "matplotlib",
    "apscheduler",
    "redis",
    "ollama",
    "deep-translator",
    "sqlite-utils",
    "dotenv>=0.9.9",
]
requires-python = ">=3.8"
description = "A Telegram bot for tracking calorie intake and providing nutritional information."
readme = "README.md"
license = { text = "MIT" }
